deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h3ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: h3ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: h3ui
    spec:
      containers:
      - args:
        - |
          # k0s agent
          h3 server
        ports:
        - containerPort: 4430
          hostPort: 456
          protocol: UDP
        - containerPort: 4430
          protocol: TCP
        command:
        - bash
        - -c
        image: btwiuse/h3
        imagePullPolicy: Always
        name: h3ui
        volumeMounts:
        - mountPath: /h3
          name: h3ui
      restartPolicy: Always
      volumes:
      - secret:
          secretName: ui.k0s.io
        name: h3ui
      - hostPath:
          path: /
        name: chroot
---
apiVersion: v1
kind: Service
metadata:
  name: h3ui
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 4430
    name: tcp
  - port: 4000
    protocol: UDP
    targetPort: 4430
    name: udp
  selector:
    app: h3ui
  sessionAffinity: None
  type: ClusterIP
---
# TODO How to make traefik ingress work with http3?
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: ui.k0s.io
spec:
  rules:
  - host: ui.k0s.io
    http:
      paths:
      - backend:
          service:
            name: h3ui
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ui.k0s.io
    secretName: h3ui
